--- a/package.json
+++ b/package.json
@@ -1,23 +1,28 @@
 {
-  "name": "nextjs-boilerplate",
+  "name": "",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "bun run --bun next dev --turbopack",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "build": "bun run --bun next build",
+    "start": "bun run --bun next start"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.1.1",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.469.0",
     "next": "15.1.2",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "recoil": "^0.7.7"
+    "recoil": "^0.7.7",
+    "tailwind-merge": "^2.5.5",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "typescript": "^5.7.2",
-    "@types/node": "^20.17.10",
+    "@types/bun": "^1.1.14",
     "@types/react": "^19.0.2",
     "@types/react-dom": "^19.0.2",
     "postcss": "^8.4.49",
